# tstorage-clients

./: .gitignore  README.md
c/: CMakeLists.txt  EXAMPLE.md  README.md
c/example/: CMakeLists.txt  tstorage-example.c
c/include/tstorage-client/: client.h
c/src/: BufferedIStream.c  BufferedIStream.h  BufferedOStream.c  BufferedOStream.h  Channel.c  Channel.h  DynamicArray.c  DynamicArray.h  DynamicBuffer.c  DynamicBuffer.h  ErrorCode.h  Key.c  Key.h  KeyRange.c  KeyRange.h  MsgType.h  Record.c  Record.h  RecordsSet.c  RecordsSet.h  RequestGet.c  RequestGet.h  RequestHeader.c  RequestHeader.h  RequestPut.c  RequestPut.h  ResponseGet.c  ResponseGet.h  ResponseGetConfirmation.c  ResponseGetConfirmation.h  ResponseGetWithCallback.c  ResponseGetWithCallback.h  ResponseHeader.c  ResponseHeader.h  ResponsePut.c  ResponsePut.h  Socket.c  Socket.h  timestamp.c
cpp/libtstorageclient++/: .clang-format  .clang-tidy  .gitignore  Makefile  README.md
cpp/libtstorageclient++/example/: .clang-tidy  Makefile
cpp/libtstorageclient++/example/src/: CommandLineOptions.cpp  CommandLineOptions.h  CsvRecord.cpp  CsvRecord.h  CsvToRecordParser.cpp  CsvToRecordParser.h  File.cpp  File.h  Log.cpp  Log.h  Main.cpp  Utils.cpp  Utils.h
cpp/libtstorageclient++/include/tstorageclient++/: Channel.h  Channel.tpp  ChannelBase.h  DataTypes.h  PayloadType.h  RecordsSet.h  Response.h  ResponseAcq.h  ResponseGet.h  Timestamp.h  Version.h
cpp/libtstorageclient++/src/: BatchSerializer.cpp  BatchSerializer.h  Buffer.cpp  Buffer.h  ChannelBase.cpp  ChannelImpl.cpp  ChannelImpl.h  DataTypes.cpp  Defines.h  Headers.h  Serializer.cpp  Serializer.h  Socket.cpp  Socket.h  Timestamp.cpp  Version.cpp
cpp/libtstorageclient++/tests/: .clang-tidy  Makefile  pystorage.py  run-tests.py
cpp/libtstorageclient++/tests/src/: Asserts.cpp  Asserts.h  BufferTests.cpp  BufferTests.h  ChannelTests.cpp  ChannelTests.h  FloatPayload.cpp  FloatPayload.h  SerializerTests.cpp  SerializerTests.h  SocketTests.cpp  SocketTests.h  StringPayload.cpp  StringPayload.h  Test.cpp
csharp/: .gitignore  README.md  csharp.sln
csharp/ExampleApp/: ExampleApp.csproj  Helper.cs  Main.cs
csharp/TStorage/: Doxyfile
csharp/TStorage.Tests/: TStorage.Tests.csproj
csharp/TStorage.Tests/FunctionalTests/: GetAcqTests.cs  GetStreamTests.cs  PutGetTests.cs  PutaGetTests.cs
csharp/TStorage.Tests/UnitTests/: KeyTests.cs  NetworkBufferTests.cs  RecordSetTests.cs  TimestampTests.cs
csharp/TStorage/Interfaces/: IChannel.cs  IPayloadType.cs  Key.cs  Protocol.cs  Record.cs  RecordsSet.cs  Response.cs  ResponseAcq.cs  ResponseGet.cs  ResponseStatus.cs
csharp/TStorage/Main/: Channel.cs
csharp/TStorage/Utilities/: GetAcqClient.cs  GetClient.cs  NetworkBuffer.cs  PutClient.cs  Timestamp.cs
java/: LICENSE  README.md  pom.xml
java/example/tester_project_0/: pom.xml
python/: .gitignore  LICENSE  README.md  pyproject.toml
python/etc/: records.csv
python/examples/: example_app.py  example_numpy.py  example_usage.py
python/src/tstorage_client/: __init__.py  __main__.py  _channel_common.py  channel.py  channel_async.py  payload_type.py  record.py  records_set.py  response.py  timestamp.py
python/tests/: Dockerfile  docker_compose.yaml
python/tests/integration/: example_usage.py  test_channels.py
python/tests/unit/: test_channel.py  test_channel_async.py  test_channel_common.py  test_channel_mixin.py  test_payload_type.py  test_record.py  test_response.py  test_timestamp.py
(+91 files in other folders)
